sprint 6 fix